Fix mobile menu and update styling to match OO.org
- White links, not grey blue
- 2px borders, not 1px
- The burger icon had broken in Chrome since v72
- We were using the wrong breakpoints for things within the menu,
  causing stuff to stay styled for large screens after we'd toggled to
  the mobile version

I also tidied up some of the breakpoint usage, so that it was 100%
mobile-first, rather than an odd mix of breakpoints up and down.

Removed the brand-subhead styling, as we don't have any content for that

--- a/app/assets/stylesheets/site-header.scss
+++ b/app/assets/stylesheets/site-header.scss
@@ -2,12 +2,14 @@
   background-color: $darkBlue;
 }
 
+// See also variables in variables.scss since this is a Bootstrap component
+// we're tweaking
 .navbar {
-  border-bottom: 1px solid lighten( $darkBlue, 12% );
+  border-bottom: 2px solid lighten( $darkBlue, 12% );
   font-family: $sans;
-  padding: 0.5rem 0 0 0;
-  @include media-breakpoint-down(md) {
-    padding-top: 0;
+  padding: 0;
+  @include media-breakpoint-up(lg) {
+    padding-top: 0.5rem;
   }
   .navbar-nav {
     .nav-item {
@@ -18,13 +20,15 @@
         padding: 14px 0;
       }
     }
+
     .sign-up-nav {
-      @include media-breakpoint-up(md) {
+      @include media-breakpoint-up(lg) {
         padding-left: 1.5rem;
-        border-left: 1px solid lighten( $darkBlue, 12% );
+        border-left: 2px solid lighten( $darkBlue, 12% );
         margin-left: 1.5rem;
       }
     }
+
     .follow-nav {
       .nav-item {
         .nav-link {
@@ -33,36 +37,36 @@
         }
       }
       .nav-item + .nav-item {
-        @include media-breakpoint-up(md) {
+        float: left;
+        margin-right: 1rem;
+
+        @include media-breakpoint-up(lg) {
+          margin-right: 0;
           margin-left: .75rem;
-        }
-        @include media-breakpoint-down(md) {
-          float: left;
-          margin-right: 1rem;
         }
       }
     }
+
     .follow-label {
-      padding: 14px 0;
+      padding: 14px 0 0 0;
       font-family: $serif;
       font-size: 14px;
       font-style: italic;
       color: lighten($darkBlue, 45%);
-      @include media-breakpoint-down(md) {
-        padding-bottom: 0;
+      @include media-breakpoint-up(lg) {
+        padding-bottom: 14px;
       }
     }
+
     .nav-item + .nav-item {
-      @include media-breakpoint-up(md) {
+      @include media-breakpoint-up(lg) {
         margin-left: 1.5rem;
       }
     }
+
     .nav-item.active {
-      @include media-breakpoint-up(md) {
+      @include media-breakpoint-up(lg) {
         border-bottom: 2px solid $electricBlue;
-      }
-      a {
-        color: $white;
       }
     }
   }
@@ -72,6 +76,11 @@
   border-color: transparent;
   margin-left: -.75rem;
   height: 3em;
+  // Chrome 72+ doesn't like data urls with an unescaped # in, no doubt this is
+  // fixed in later versions of Bootstrap, but we can't upgrade just for this as
+  // it's quite a big change.
+  // This is identical to bootstrap's, with an escaped # in the path stroke colour
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23FFFFFF' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")
 }
 
 .navbar-toggler {
@@ -80,45 +89,30 @@
   overflow: visible;
   span {
     position: relative;
-    font-size: 0.875rem;
-    color: #7E94B4;
+    // Match the menu items
+    font-size: 14px;
+    font-weight: bold;
   }
 }
 
 .brand-header {
-  padding: 30px 0 34px;
-  @include media-breakpoint-down(md) {
-    padding: 20px 0 20px;
+  padding: 20px 0 20px;
+  @include media-breakpoint-up(lg) {
+    padding: 30px 0 34px;
   }
 }
 
 .logo {
-  width: 280px;
+  width: 220px;
   height: auto;
-  @include media-breakpoint-down(md) {
-    width: 220px;
-  }
-}
-
-.brand-subhead.pull-right {
-  font-family: $serif;
-  font-weight: normal;
-  font-size: 16px;
-  text-align: right;
-  color: lighten( $darkBlue, 85% );
-  margin-bottom: 0;
-  -webkit-font-smoothing: antialiased;
-  float: right;
-  @include media-breakpoint-down(md) {
-    float: none;
-    text-align: left;
-    margin-top: 20px;
+  @include media-breakpoint-up(lg) {
+    width: 280px;
   }
 }
 
 .secondary-search {
   display: none;
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(lg) {
     padding-left: 20px;
   }
   .form-group {
@@ -154,11 +148,10 @@
   .brand-header {
     padding: 20px 0 5px;
   }
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(lg) {
     .brand-header {
-      display: inline-block;
       padding: 21px 20px 19px 0;
-      border-right: 1px solid lighten( $darkBlue, 12% );
+      border-right: 2px solid lighten( $darkBlue, 12% );
       float: left;
     }
     .logo {
@@ -166,13 +159,13 @@
     }
     .navbar {
       float: right;
-      width: calc( 100% - 208px );
+      width: calc( 100% - 209px );
       padding-left: 20px;
       padding-top: 4px;
     }
     .secondary-search {
       float: right;
-      width: calc( 100% - 208px );
+      width: calc( 100% - 209px );
     }
   }
 }
