--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -37,10 +37,10 @@ $input-border-focus: #CCCCCC;
 $input-padding-x-lg: 1rem;
 $input-line-height: 1.5;
 $navbar-padding-x: 0;
-$navbar-dark-color: #7E94B4;
-$navbar-dark-hover-color: lighten($darkBlue, 70%);
-$navbar-dark-active-color: lighten($darkBlue, 70%);
-$navbar-dark-disabled-color: lighten($darkBlue, 20%);
+$navbar-dark-color: $white;
+$navbar-dark-hover-color: $white;
+$navbar-dark-active-color: $white;
+$navbar-dark-disabled-color: darken($white, 10%);
 $state-danger-bg: rgba(254, 229, 230, .9);
 $state-danger-text: $red;
 $state-info-bg: rgba(224, 222, 247, .9);
